Bug 245902 - Find Uses Keyboard Support
Summary: Find Uses Keyboard Support
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2010-07-27 14:25 UTC by Vishesh Handa
Modified: 2017-02-15 23:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vishesh Handa 2010-07-27 14:25:57 UTC
Version:           SVN (using Devel) 
OS:                Linux

When I hover the mouse over a function or I keep alt pressed, a window appears showing the declaration and so on. I can use the arrow keys to navigate to the "Find Uses" option, and then pressing "Enter" gives me all the uses. But I can't navigate the Find Uses window with the keyboard.

Reproducible: Always
Comment 1 Kevin Funk 2012-12-01 21:40:26 UTC
I wondered about that, too, actually some bits of the GrepModelView could be reused(?). Keyboard navigation is already implemented over there.
Comment 2 Kevin Funk 2015-11-29 15:43:30 UTC
This should be easy to implement by now.

Just have a look at this commit in kdevplatform.git and adapt to the "Show Uses" view:

commit a7d7382b1469018ea96051637404748a1cd17995
Author: Kevin Funk <kfunk@kde.org>
Date:   Sat Aug 22 14:12:59 2015 +0200

    problemreporter: Implement IToolViewActionListener
    
    We can now navigate with F4 / Shift+F4 through the problems list view(s)
Comment 3 Damir Porobic 2017-01-30 19:18:59 UTC
I'll have a look at this one.
Comment 4 Damir Porobic 2017-02-07 18:30:26 UTC
Proposed patch https://phabricator.kde.org/D4483
Comment 5 Milian Wolff 2017-02-15 23:08:24 UTC
Git commit 0ed19a87cef4872d9bf7e50dc89db8895428bb40 by Milian Wolff, on behalf of Damir Porobic.
Committed on 15/02/2017 at 22:29.
Pushed by mwolff into branch 'master'.

Keyboard shortcuts for Uses in Code Browser

Fix for bug/wish 245902. Use the IToolActionViewer to implement
this feature: When the code browser is open and shows uses you can
now navigate through all uses by pressing F4 and Shift+F4. The Use
that is selected will also be opened, just like clicking on it.

Test Plan: Manual Testing
Reviewed By: mwolff
Differential Revision: https://phabricator.kde.org/D4483

M  +39   -3    language/duchain/navigation/useswidget.cpp
M  +5    -0    language/duchain/navigation/useswidget.h
M  +85   -0    plugins/contextbrowser/contextbrowserview.cpp
M  +5    -1    plugins/contextbrowser/contextbrowserview.h

https://commits.kde.org/kdevplatform/0ed19a87cef4872d9bf7e50dc89db8895428bb40