Keyboard shortcuts for Uses in Code Browser

Fix for bug/wish 245902. Use the IToolActionViewer to implement
this feature: When the code browser is open and shows uses you can
now navigate through all uses by pressing F4 and Shift+F4. The Use
that is selected will also be opened, just like clicking on it.

Test Plan: Manual Testing

BUG: 245902
Reviewed By: mwolff
Differential Revision: https://phabricator.kde.org/D4483